# myEgeria

./: README.md  __init__.py  pyproject.toml
src/: .env  Old_main_candidate for deletion.py  __init__.py  config.json  config.py  error_popup_app.py  meow.py  my_egeria.py  set_variables.zsh  startup_check.py
src/con_services/: __init__.py  egeria_connection.py
src/screens/: __init__.py  base_screen.py  governance_screen.py  login_screen.py  main_menu.py  project_screen.py  splash_screen.py  subject_area_screen.py
src/screens/GovernanceOfficer/: add_governance_definition.py  delete_governance_definition.py  governance_officer_browser.py  marketplace_tree.py
src/screens/ProductManager/: product_manager_browser.py
src/screens/ProjectManager/: ProjectManagerBrowser.py
src/screens/a_collections/: __init__.py  add_collection.py  collection_browser.py
src/screens/collections/: collection_browser.py  collection_details.py  collection_members_screen.py  delete_collection.py
src/screens/glossary/: glossary_browser.py  glossary_list_screen.py  term_details.py  term_list_screen.py
src/screens/platform/: platform_services.py  platforms_screen.py
src/services/: base_service.py  collection_service.py  egeria_connection.py  glossary_service.py  governance_officer_service.py  product_manager_service.py  project_manager_service.py  subject_area_service.py
src/tests/: conftest.py  test_glossary_service.py  test_login_screen.py  test_main_menu.py  test_startup_check.py  test_term_details_screen.py
src/utils/: egeria_client.py
