[tool.poetry]
#
#   PDX-License-Identifier: Apache-2.0
#   Copyright Contributors to the ODPi Egeria project.

name = "myegeria"
version = "0.1"

license = 'Apache 2.0'
authors = ["Peter Coldicott <peter.coldicott@pdr-associates.com>"]
readme = "README.md"
description = "A textual UI for Egeria"
keywords = ["egeria", "metadata", "governance"]
homepage = "https://github.com/odpi/egeria-python"

repository = "https://github.com/odpi/egeria-python"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
 ]
packages = [
    { include = "src/my_egeria"},
    { include = "src/my_egeria/screens"},
    { include = "src/my_egeria/services"},
    { include = "src/my_egeria/widgets"},
    { include = "src/my_egeria/styles"},
    { include = "src/my_egeria/utils"},

    ]

[tool.poetry.dependencies]
#python = "^3.11" # 3.12 seemed to fail
python = ">3.12,<4.0.0"
#python = "^3.13" Need to upgrade jupyter image
httpx = "*"
rich = "*"
validators = "*"
urllib3 = "*"
requests = "*"
pytest = "^8.3.5"
jupyter = "*"
click = "*"
trogon = "^0.6.0"
textual = "*"
mermaid-py = "*"
psycopg2-binary = "^2.9.9"
jupyter-notebook-parser = "^0.1.4"
loguru = "^0.7.3"
poetry-core = "^2.1.3"
inflect = "^7.5.0"
pydantic = "^2.11.7"
pydantic-settings = "^2.10.1"
pydevd-pycharm = "^252.23892.364"
pyegeria = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"



[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
black = "^25.1.0"
isort = "^6.0.0"

[tool.poetry.scripts]
    my_egeria = "src.main:main"